# bertrand_duopolyAI

./: .env  README.md  app.py  intro.py  main_firm_pricing_competition.py  pyproject.toml  ui.py
output/pricing_competition/Record-250207-1039-sabiazinho-3/: logs_conversation.txt  logs_decision.csv  logs_decision_plot.csv
output/pricing_competition/Record-250207-1116-MaritacaAI/: logs_conversation.txt  logs_decision.csv  logs_decision_plot.csv
output/pricing_competition/Record-250207-1119-Gemini_2dot0_flash_lite/: logs_conversation.txt  logs_decision.csv  logs_decision_plot.csv
output/pricing_competition/Record-250207-1121-Gemini_2dot0_flash_lite/: logs_conversation.txt  logs_decision.csv  logs_decision_plot.csv
output/pricing_competition/Record-250207-1128-Gemini_2dot0_pro/: logs_conversation.txt  logs_decision.csv  logs_decision_plot.csv
output/pricing_competition/Record-250207-1130-Gemini_2dot0_flash_lite/: logs_conversation.txt  logs_decision.csv  logs_decision_plot.csv  logs_strategy.csv
output/pricing_competition/Record-250207-1135-MaritacaAI/: logs_conversation.txt  logs_decision.csv  logs_decision_plot.csv  logs_strategy.csv
output/pricing_competition/Record-250207-1148-MaritacaAI/: logs_conversation.txt
output/pricing_competition/Record-250207-1208-MaritacaAI/: logs_conversation.txt  logs_decision.csv  (+1 more)
sabm/: agent.py  agent_LLM_core.py  arguments.py  data_output.py  data_plot.py  data_theoretical_solution.py  pricing_competition.py  prompt.py  prompt_pt_br.py  prompt_pt_br_enhanced.py  sabm.py  utils.py
tests/: test_agent_LLM_core.py
(+100 files in other folders)
